# MyAgent

./: .gitignore  Agent_with_websearch.ipynb  Data_processing_youtube_transcripts.ipynb  Demo_notebook.ipynb  GitHub_podcast_download.ipynb  Granite_Docling_pdfs.ipynb  Jina_local_pdfs.ipynb  Jina_web_AI_Act.ipynb  Multi_tool_agent.ipynb  Process_YouTube_Transcripts.ipynb  README.md  main.py  pyproject.toml
.ipynb_checkpoints/: main-checkpoint.py  main_backup-checkpoint.py
.qdrant_rag/: meta.json
data/github_podcast/: manifest.jsonl
data/granite_docling_pdfs/: docs.jsonl  manifest.json  pdf-pdfs-a-practical-guide-to-ai-and-copyright-oliver-patel-19cc0438337e.json  pdf-pdfs-ai-governance-in-practice-report-2024-iapp-8da99f96370f.json  pdf-pdfs-ai-governance-in-practice-report-2024-iapp-8da99f96370f.txt  pdf-pdfs-ai-openness-a-primer-for-policymakers-oecd-31d8c2826e76.json  pdf-pdfs-ai-openness-a-primer-for-policymakers-oecd-31d8c2826e76.txt  pdf-pdfs-ai-risk-management-singapore-506923eb3328.txt  pdf-pdfs-ai-security-concerns-in-a-nutshell-62a50d12c363.json  pdf-pdfs-ai-security-concerns-in-a-nutshell-62a50d12c363.txt  pdf-pdfs-artificial-intelligence-systems-and-the-gdpr-belgium-662050b41ff0.json  pdf-pdfs-bsi-eu-ai-act-whitepaper-final-2-9-24-2ca62ebf0cb4.json  (+58 more)
data_processing/: Data_processing_granite_docling_pdfs.ipynb
guards/: scope_guard.py
tests/: judge.py  test_integration.py  test_llm_judge.py  test_scope_guard.py
tools/: cognee_memory.py  dependencies.py  web_search_tool.py
urls/: ai_act_annexes.txt  ai_act_articles.txt  ai_act_recitals.txt
(+1895 files in other folders)
