[project]
name = "myagent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "atomic-agents>=1.1.11",
    "jupyterlab>=4.5.1",
    "openai>=2.14.0",
    "python-dotenv>=1.2.1",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.5",
    "toyaikit>=0.0.8",
    "youtube-transcript-api>=1.2.3",
    "yt-dlp>=2025.12.8",
]
